Tirei CDN, botei efeito de CSS pra stickers e adicionei 2 jogos

--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
 
           <a href="projetos/scratchquest.html">
             <div class='grid-item'>
-              <img src="img/Projetos/ScratchQuest.png" alt="Scratch Quest">
+              <img src="img/Projetos/ScratchQuest.png" alt="Scratch Quest" class="sticker">
               <div class="info">
                 <h1>Scratch Quest</h1>
                 <p>Ajude Scratch a virar a melhor Game Engine do mundo!</p>
@@ -76,7 +76,7 @@
           </a>
           <a href="projetos/urinight.html">
             <div class='grid-item'>
-              <img src="img/Projetos/Urinight.png" alt="Urinight">
+              <img src="img/Projetos/Urinight.png" alt="Urinight" class="sticker">
               <div class="info">
                 <h1>Urinight</h1>
                 <p>Simulador de fazer xixi durante a noite.</p>
@@ -85,7 +85,7 @@
           </a>
           <a href="projetos/crie-sua-danca.html">
             <div class='grid-item'>
-              <img src="img/Projetos/crie sua dança.png" alt="Crie sua Dança">
+              <img src="img/Projetos/crie sua dança.png" alt="Crie sua Dança" class="sticker">
               <div class="info">
                 <h1>Crie sua Dança</h1>
                 <p>Crie a sua própria dancinha besta.</p>
@@ -94,7 +94,7 @@
           </a>
           <a href="https://github.com/Fupicat/GodotRecorder">
             <div class='grid-item'>
-              <img src="img/Projetos/GodotRecorder.png" alt="GodotRecorder">
+              <img src="img/Projetos/GodotRecorder.png" alt="GodotRecorder" class="sticker">
               <div class="info">
                 <h1>GodotRecorder</h1>
                 <p>Projeto da Godot Engine que te deixa criar e renderizar animações usando a própria engine.</p>
@@ -106,28 +106,9 @@
       </div>
     </section>
 
-    <section id='progress'>
-      <div class='container'>
-        <article>
-          <h1>Projetos Atuais</h1>
-          <p>O que estou fazendo no momento, na ordem de mais para menos importante, ou de menos para mais demorado.</p>
-          <ol>
-            <li>Modelagem 3D voluntária para outro jogo.</li>
-            <li><a href='https://twitter.com/fupibr/status/1283934202967334912'>SZ</a>.</li>
-          </ol>
-          <a href="ideias.html">Minha página de ideias aleatórias</a>
-          <br>
-          <br>
-        </article>
-      </div>
-    </section>
-
     <footer></footer>
 
-    <script
-			  src="https://code.jquery.com/jquery-3.4.1.min.js"
-			  integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo="
-			  crossorigin="anonymous"></script>
+    <script src="/js/jquery-3.5.1.min.js"></script>
     <script src="/autoload.js"></script>
 
   </body>
