--- a/projetos/bullet-hell-boss.html
+++ b/projetos/bullet-hell-boss.html
@@ -20,7 +20,7 @@
     <meta name="msapplication-TileColor" content="#603cba">
     <meta name="theme-color" content="#6e438d">
 
-    <title>Fupi &#183; Urinight</title>
+    <title>Fupi &#183; Bullet Hell mas você é o boss</title>
   </head>
   <body>
     <!-- Olá, eu sou o código-fonte. Por favor não repare na bagunça. '3' !-->
@@ -29,54 +29,51 @@
 
     <section class="proj-header">
       <div class="container">
-        <h1>Urinight</h1>
+        <h1>Bullet Hell mas você é o boss</h1>
       </div>
     </section>
 
     <section class='browser-game'>
       <div class="container">
-        <iframe src="https://itch.io/embed/695012?bg_color=32434b&amp;fg_color=e9f7fb&amp;link_color=fa5bc3&amp;border_color=484a50" width="552" height="167" frameborder="0"><a href="https://fupi.itch.io/urinight">Urinight por Fupi</a></iframe>
+        <iframe src="https://scratch.mit.edu/projects/427523502/embed" allowtransparency="true" width="100%" height="620" frameborder="0" scrolling="no" allowfullscreen></iframe>
         
         <style>
           body {
-            background-color: #1b1e24;
+            background-color: #060121;
           }
           .proj-header h1 {
             color: #fff;
           }
           .grid-item {
-            background-color: #d74fd5;
-            color: #000;
+            background-color: #031750;
+            color: #fff;
           }
           .grid-item a {
-            color: #490064;
+            color: #bc81e6;
           }
         </style>
         
-        <p class="warning">Atenção: Jogo apenas em inglês.</p>
         <div class="grid">
           <div class="grid-item">
             <div class="info">
               <h1>Instruções</h1>
-              <p>Controles: Mouse</p>
-              <p>Seu objetivo é acertar 100% do seu mijo no vaso.</p>
-              <p>Arraste o corpo do cara para girar.</p>
-              <p>Arraste a seta para mudar a força do tiro.</p>
-              <p>Clique no botão “GO!” para começar a simulação e “STOP!” para parar.</p>
-              <p>Cada fase tem física diferente.</p>
-              <p>Sempre que você não estiver mijando, sua barrinha de paciência desce.</p>
-              <p>Se sua paciência acabar, você perde uma vida.</p>
+              <p>Controles: Mouse e teclado</p>
+              <p>Mova com o MOUSE.</p>
+              <p>Troque de arma com 1 2 3 e 4.</p>
+              <p>Atire CLICANDO, depois espere o ataque terminar.</p>
+              <p>Toda arma tem cooldown e o jogador escapa de todos os seus ataques.</p>
+              <p>Aperte ESPAÇO para destruir os powerups que você encostou, mas você precisa ter todas as armas carregadas pra isso.</p>
+              <p>Sobreviva por um minuto pra ganhar!</p>
+              <p>Se você levar um tiro você morre.</p>
             </div>
           </div>
           <div class="grid-item">
             <div class="info">
               <h1>Sobre</h1>
-              <p>Jogo feito para a <a href="https://itch.io/jam/gmtk-2020">GMTK Jam 2020</a>.</p>
-              <p>O tema da jam era “Fora de Controle”, e o que é mais difícil de controlar do que fazer xixi de pé?</p>
-              <p>Lançado em 12 de julho de 2020.</p>
+              <p>Você controla o boss final desse shoot em up e precisa impedir o speedrunner de alcançar o recorde mundial.</p>
+              <p>Lançado em 21 de setembro de 2020</p>
               <h1>Links</h1>
-              <p><a href="https://fupi.itch.io/urinight">Página no Itch</a></p>
-              <p><a href="https://itch.io/jam/gmtk-2020/rate/695012">Página da Jam</a></p>
+              <p><a href="https://scratch.mit.edu/projects/427523502/">Página no Scratch</a></p>
             </div>
           </div>
         </div>
