--- a/projetos/loop-city.html
+++ b/projetos/loop-city.html
@@ -20,7 +20,7 @@
     <meta name="msapplication-TileColor" content="#603cba">
     <meta name="theme-color" content="#6e438d">
 
-    <title>Fupi &#183; Urinight</title>
+    <title>Fupi &#183; Loop City</title>
   </head>
   <body>
     <!-- Olá, eu sou o código-fonte. Por favor não repare na bagunça. '3' !-->
@@ -29,54 +29,56 @@
 
     <section class="proj-header">
       <div class="container">
-        <h1>Urinight</h1>
+        <img src="/img/Logos/LoopCityLogo.png" alt="Loop City">
       </div>
     </section>
 
     <section class='browser-game'>
       <div class="container">
-        <iframe src="https://itch.io/embed/695012?bg_color=32434b&amp;fg_color=e9f7fb&amp;link_color=fa5bc3&amp;border_color=484a50" width="552" height="167" frameborder="0"><a href="https://fupi.itch.io/urinight">Urinight por Fupi</a></iframe>
+        <iframe frameborder="0" src="https://itch.io/embed-upload/2797468?color=522e17" allowfullscreen="" width="1024" height="620"><a href="https://fupi.itch.io/loopcity">Play Loop City on itch.io</a></iframe>
         
         <style>
           body {
-            background-color: #1b1e24;
+            background-color: #522e17;
           }
           .proj-header h1 {
-            color: #fff;
-          }
-          .grid-item {
-            background-color: #d74fd5;
             color: #000;
           }
+          .grid-item {
+            background-color: #d1b081;
+            color: #222222;
+          }
           .grid-item a {
-            color: #490064;
+            color: #d42403;
           }
         </style>
         
-        <p class="warning">Atenção: Jogo apenas em inglês.</p>
+        <p class="warning">Atenção: Jogo em inglês. (por enquanto...)</p>
         <div class="grid">
           <div class="grid-item">
             <div class="info">
               <h1>Instruções</h1>
-              <p>Controles: Mouse</p>
-              <p>Seu objetivo é acertar 100% do seu mijo no vaso.</p>
-              <p>Arraste o corpo do cara para girar.</p>
-              <p>Arraste a seta para mudar a força do tiro.</p>
-              <p>Clique no botão “GO!” para começar a simulação e “STOP!” para parar.</p>
-              <p>Cada fase tem física diferente.</p>
-              <p>Sempre que você não estiver mijando, sua barrinha de paciência desce.</p>
-              <p>Se sua paciência acabar, você perde uma vida.</p>
+              <p>Controles: Mouse e teclado</p>
+              <p>Mova com o mouse.</p>
+              <p>Clique com o botão ESQUERDO (ou aperte X) para interagir com objetos.</p>
+              <p>Interaja com NPCs para pegar quests, complete-as para avançar no jogo.</p>
+              <p>Clique com o botão DIREITO (ou aperte Z) para jogar itens fora.</p>
+              <p>Aperte ESPAÇO para abrir a loja.</p>
+              <p>Rodinha do mouse para baixo (ou aperte S) para cair mais rápido.</p>
+              <p>Rodinha do mouse para cima (ou aperte W) para cair mais devagar.</p>
+              <p>Aperte ESC ou ENTER para pausar e rever os controles.</p>
             </div>
           </div>
           <div class="grid-item">
             <div class="info">
               <h1>Sobre</h1>
-              <p>Jogo feito para a <a href="https://itch.io/jam/gmtk-2020">GMTK Jam 2020</a>.</p>
-              <p>O tema da jam era “Fora de Controle”, e o que é mais difícil de controlar do que fazer xixi de pé?</p>
-              <p>Lançado em 12 de julho de 2020.</p>
+              <p>Este jogo foi criado para a game jam Ludum Dare 47, onde eu tinha 72 horas para fazer um jogo.</p>
+              <p>O tema era "Preso em um Loop", então eu fiz um jogo onde você cai infinitamente por uma cidade que loopa!</p>
+              <p>Lançado em 5 de outubro de 2020.</p>
               <h1>Links</h1>
-              <p><a href="https://fupi.itch.io/urinight">Página no Itch</a></p>
-              <p><a href="https://itch.io/jam/gmtk-2020/rate/695012">Página da Jam</a></p>
+              <p><a href="https://fupi.itch.io/loopcity">Página no Itch</a></p>
+              <p><a href="https://ldjam.com/events/ludum-dare/47/loop-city">Página da jam</a></p>
+              <p><a href="https://www.youtube.com/watch?v=pWotZHehVSk">Vídeo de eu fazendo o jogo</a></p>
             </div>
           </div>
         </div>
