--- a/autoload/navbar.html
+++ b/autoload/navbar.html
@@ -3,6 +3,7 @@
     <nav>
         <a href="/projetos.html">Projetos</a>
         <a href="/sobre.html">Sobre</a>
+        <a href="/ideias.html">Ideias</a>
         <a href="https://twitter.com/fupibr">Twitter</a>
     </nav>
 </div>
