--- a/projetos.html
+++ b/projetos.html
@@ -88,17 +88,6 @@
       </div>
     </section>
 
-    <section class='projects-section' id='recomend'>
-      <div class="container">
-        <div class="projects-header">
-          <h1>Recomendações</h1>
-        </div>
-        <div class="grid" style="grid-template-columns: auto;">
-
-        </div>
-      </div>
-    </section>
-
     <section class='projects-section' id='cancel'>
       <div class="container">
         <div class="projects-header">
@@ -112,15 +101,24 @@
 
     <footer></footer>
 
-    <script
-			  src="https://code.jquery.com/jquery-3.4.1.min.js"
-			  integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo="
-			  crossorigin="anonymous"></script>
+    <script src="/js/jquery-3.5.1.min.js"></script>
     <script src="/autoload.js"></script>
     <script>
 
       let projects = {
         'jogos': [
+          {
+            name: "Loop City",
+            url: "loop-city",
+            img: "img/Projetos/LoopCity.png",
+            desc: "Caia num buraco infinito e resolva os problemas dos outros."
+          },
+          {
+            name: "Bullet Hell mas você é o boss",
+            url: "bullet-hell-boss",
+            img: "img/Projetos/BHBoss.png",
+            desc: "Não deixe a navinha vencer de você!"
+          },
           {
             name: 'Urinight',
             url: 'urinight',
@@ -340,14 +338,6 @@
             desc: 'Um projeto da Godot Engine que você pode usar para renderizar animações feitas dentro da Engine.'
           },
         ],
-        'recomend': [
-          {
-            name: 'Scratch Image Uploader Extension',
-            url: 'https://github.com/JeffaloBob/scratch-image-uploader',
-            img: 'img/Projetos/ScratchUpload.png',
-            desc: '(Inglês) Extensão para Chrome (e userscript para Firefox) que te deixa copiar e colar imagens direto no fórum do Scratch para hostear.'
-          },
-        ],
         'cancel': [
           {
             name: 'SZ',
@@ -379,6 +369,7 @@
           let img = document.createElement('img');
           img.src = proj.img;
           img.alt = proj.name;
+          img.className = "sticker"
           let info = document.createElement('div');
           info.className = 'info';
           let title = document.createElement('h1');
