--- a/projetos/fupicat-os-mobile.html
+++ b/projetos/fupicat-os-mobile.html
@@ -77,10 +77,7 @@
 
     <footer></footer>
 
-    <script
-	  src="https://code.jquery.com/jquery-3.4.1.min.js"
-	  integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo="
-	  crossorigin="anonymous"></script>
+    <script src="/js/jquery-3.5.1.min.js"></script>
     <script src="/autoload.js"></script>
 
   </body>
