--- a/projetos/god-complex.html
+++ b/projetos/god-complex.html
@@ -29,7 +29,7 @@
 
     <section class="proj-header">
       <div class="container">
-        <img src="../img/Projetos/God Complex Logo.png" alt="God Complex">
+        <img src="/img/Logos/God Complex Logo.png" alt="God Complex">
       </div>
     </section>
 
@@ -82,10 +82,7 @@
 
     <footer></footer>
 
-    <script
-			  src="https://code.jquery.com/jquery-3.4.1.min.js"
-			  integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo="
-			  crossorigin="anonymous"></script>
+    <script src="/js/jquery-3.5.1.min.js"></script>
     <script src="/autoload.js"></script>
 
   </body>
