--- a/sobre.html
+++ b/sobre.html
@@ -50,15 +50,14 @@
         <ul>
           <li><h3>Código aberto</h3></li>
           <ul>
-            <li><a href="https://godotengine.org/">Godot Engine</a> (para fazer jogos)</li>
+            <li><a href="https://godotengine.org/">Godot Engine</a> (para fazer jogos e até animações)</li>
             <li><a href="https://krita.org/">Krita</a> (para fazer gráficos e edição de imagem)</li>
             <li><a href="https://inkscape.org/">Inkscape</a> (para fazer gráficos em vetorial, por exemplo meu logo)</li>
             <li><a href="https://kdenlive.org/en/">Kdenlive</a> (editor de vídeo que eu uso pra vídeos simples sem muitas transições e animação)</li>
             <li><a href="https://blender.org/">Blender</a> (programa de modelagem 3D)</li>
             <li><a href="https://lmms.io/">LMMS</a> (DAW simples mas muito boa para fazer música)</li>
             <li><a href="https://www.audacityteam.org/">Audacity</a> (editor de áudio que eu uso pra muitas <i>coisas</i>)</li>
-            <li><a href="https://www.mozilla.org/en-US/firefox/new/">Firefox</a> (navegador que é bem útil na criação de sites, ele tem um inspetor de elemento muito completo)</li>
-            <li><a href="https://linuxmint.com/">Linux Mint Cinnamon</a> (OS que eu uso no meu PC)</li>
+            <li><a href="https://www.mozilla.org/en-US/firefox/new/">Firefox</a> (tem um inspetor bem completo, dá pra tirar print de elementos HTML específicos, e abrir arquivos baixados sem precisar salvá-los)</li>
           </ul>
           <li><h3>Grátis</h3></li>
           <ul>
@@ -84,10 +83,7 @@
 
     <footer></footer>
 
-    <script
-			  src="https://code.jquery.com/jquery-3.4.1.min.js"
-			  integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo="
-			  crossorigin="anonymous"></script>
+    <script src="/js/jquery-3.5.1.min.js"></script>
     <script src="/autoload.js"></script>
 
   </body>
