--- a/index.html
+++ b/index.html
@@ -65,12 +65,21 @@
         <h1>Coisas em Destaque</h1>
         <div class="grid">
 
-          <a href="projetos/scratchquest.html">
+          <a href="projetos/loop-city.html">
             <div class='grid-item'>
-              <img src="img/Projetos/ScratchQuest.png" alt="Scratch Quest" class="sticker">
+              <img src="img/Projetos/LoopCity.png" alt="Loop City" class="sticker">
               <div class="info">
-                <h1>Scratch Quest</h1>
-                <p>Ajude Scratch a virar a melhor Game Engine do mundo!</p>
+                <h1>Loop City</h1>
+                <p>Caia num buraco infinito e resolva os problemas dos outros.</p>
+              </div>
+            </div>
+          </a>
+          <a href="projetos/bullet-hell-boss.html">
+            <div class='grid-item'>
+              <img src="img/Projetos/BHBoss.png" alt="Bullet Hell mas você é o boss" class="sticker">
+              <div class="info">
+                <h1>Bullet Hell mas você é o boss</h1>
+                <p>Não deixe a navinha vencer de você!</p>
               </div>
             </div>
           </a>
@@ -79,25 +88,16 @@
               <img src="img/Projetos/Urinight.png" alt="Urinight" class="sticker">
               <div class="info">
                 <h1>Urinight</h1>
-                <p>Simulador de fazer xixi durante a noite.</p>
+                <p>Simulador de fazer xixi no meio da noite.</p>
               </div>
             </div>
           </a>
-          <a href="projetos/crie-sua-danca.html">
+          <a href="projetos/scratchquest.html">
             <div class='grid-item'>
-              <img src="img/Projetos/crie sua dança.png" alt="Crie sua Dança" class="sticker">
+              <img src="img/Projetos/ScratchQuest.png" alt="Scratch Quest" class="sticker">
               <div class="info">
-                <h1>Crie sua Dança</h1>
-                <p>Crie a sua própria dancinha besta.</p>
-              </div>
-            </div>
-          </a>
-          <a href="https://github.com/Fupicat/GodotRecorder">
-            <div class='grid-item'>
-              <img src="img/Projetos/GodotRecorder.png" alt="GodotRecorder" class="sticker">
-              <div class="info">
-                <h1>GodotRecorder</h1>
-                <p>Projeto da Godot Engine que te deixa criar e renderizar animações usando a própria engine.</p>
+                <h1>Scratch Quest</h1>
+                <p>Jogue como Scratch e derrote todas as Game Engines!</p>
               </div>
             </div>
           </a>
