Consertei bug: grades de projetos no mobile

--- a/projetos.html
+++ b/projetos.html
@@ -46,7 +46,7 @@
           <img src="img/Animações.png" alt="Animações">
           <h1>Animações</h1>
         </div>
-        <div class="grid" style="grid-template-columns: auto auto;">
+        <div class="grid">
 
         </div>
       </div>
@@ -70,7 +70,7 @@
           <img src="img/Arte.png" alt="Arte">
           <h1>Arte</h1>
         </div>
-        <div class="grid" style="grid-template-columns: auto;">
+        <div class="grid">
 
         </div>
       </div>
@@ -82,7 +82,7 @@
           <img src="img/Utilidades.png" alt="Utilidades">
           <h1>Utilidades</h1>
         </div>
-        <div class="grid" style="grid-template-columns: auto auto;">
+        <div class="grid">
 
         </div>
       </div>
@@ -93,7 +93,7 @@
         <div class="projects-header">
           <h1>Cancelados</h1>
         </div>
-        <div class="grid" style="grid-template-columns: auto;">
+        <div class="grid">
 
         </div>
       </div>
