Add 2 jogos + newgrounds

--- a/autoload/footer.html
+++ b/autoload/footer.html
@@ -1,6 +1,7 @@
 <div class="container">
   <p>
     <a href="https://scratch.mit.edu/users/Fupicat/">Scratch</a> &#183;
+    <a href="https://fupicat.newgrounds.com/">Newgrounds</a> &#183;
     <a href="https://gamejolt.com/@Fupi">Gamejolt</a> &#183;
     <a href="https://fupi.itch.io">Itch</a> &#183;
     <a href="https://github.com/Fupicat">GitHub</a> &#183;
