--- a/index.html
+++ b/index.html
@@ -65,6 +65,24 @@
         <h1>Coisas em Destaque</h1>
         <div class="grid">
 
+          <a href="projetos/framecerto.html">
+            <div class='grid-item'>
+              <img src="img/Projetos/FrameCerto.png" alt="FrameCerto" class="sticker">
+              <div class="info">
+                <h1>FrameCerto</h1>
+                <p>Reorganize a animação e faça o carinha chegar ao outro lado!</p>
+              </div>
+            </div>
+          </a>
+          <a href="projetos/o-mundo-de-leo-exe.html">
+            <div class='grid-item'>
+              <img src="img/Projetos/OMDLEXE.png" alt="OMundoDeLeo.exe" class="sticker">
+              <div class="info">
+                <h1>OMundoDeLeo.exe</h1>
+                <p>Aventuras amedrontadeiras com LeoLegal e turma.</p>
+              </div>
+            </div>
+          </a>
           <a href="projetos/loop-city.html">
             <div class='grid-item'>
               <img src="img/Projetos/LoopCity.png" alt="Loop City" class="sticker">
@@ -80,24 +98,6 @@
               <div class="info">
                 <h1>Bullet Hell mas você é o boss</h1>
                 <p>Não deixe a navinha vencer de você!</p>
-              </div>
-            </div>
-          </a>
-          <a href="projetos/urinight.html">
-            <div class='grid-item'>
-              <img src="img/Projetos/Urinight.png" alt="Urinight" class="sticker">
-              <div class="info">
-                <h1>Urinight</h1>
-                <p>Simulador de fazer xixi no meio da noite.</p>
-              </div>
-            </div>
-          </a>
-          <a href="projetos/scratchquest.html">
-            <div class='grid-item'>
-              <img src="img/Projetos/ScratchQuest.png" alt="Scratch Quest" class="sticker">
-              <div class="info">
-                <h1>Scratch Quest</h1>
-                <p>Jogue como Scratch e derrote todas as Game Engines!</p>
               </div>
             </div>
           </a>
