--- a/projetos.html
+++ b/projetos.html
@@ -108,6 +108,18 @@
       let projects = {
         'jogos': [
           {
+            name: "FrameCerto",
+            url: "framecerto",
+            img: "img/Projetos/FrameCerto.png",
+            desc: "Reorganize a animação e faça o carinha chegar ao outro lado!"
+          },
+          {
+            name: "OMundoDeLeo.exe",
+            url: "o-mundo-de-leo-exe",
+            img: "img/Projetos/OMDLEXE.png",
+            desc: "Encontrei o Leo.exe às 3 da manhã (trollagem)"
+          },
+          {
             name: "Loop City",
             url: "loop-city",
             img: "img/Projetos/LoopCity.png",
