--- a/projetos/framecerto.html
+++ b/projetos/framecerto.html
@@ -20,7 +20,7 @@
     <meta name="msapplication-TileColor" content="#603cba">
     <meta name="theme-color" content="#6e438d">
 
-    <title>Fupi &#183; Crie sua Dança</title>
+    <title>Fupi &#183; FrameCerto</title>
   </head>
   <body>
     <!-- Olá, eu sou o código-fonte. Por favor não repare na bagunça. '3' !-->
@@ -29,27 +29,27 @@
 
     <section class="proj-header">
       <div class="container">
-        <h1>Crie sua Dança</h1>
+        <h1>FrameCerto</h1>
       </div>
     </section>
 
     <section class='browser-game'>
       <div class="container">
-        <iframe src="https://scratch.mit.edu/projects/356472618/embed" allowtransparency="true" width="100%" height="620" frameborder="0" scrolling="no" allowfullscreen></iframe>
+        <iframe src="https://itch.io/embed-upload/2998240?color=333333" allowfullscreen="" width="640" height="395" frameborder="0"><a href="https://fupi.itch.io/frameright">Play FrameRight on itch.io</a></iframe>
         
         <style>
           body {
-            background-color: #000;
+            background-color: #a48749;
           }
           .proj-header h1 {
-            color: #fff;
+            color: #000;
           }
           .grid-item {
-            background-color: #a334b3;
-            color: #fff;
+            background-color: #d1b081;
+            color: #222222;
           }
           .grid-item a {
-            color: #04093e;
+            color: #d42403;
           }
         </style>
         
@@ -57,25 +57,24 @@
           <div class="grid-item">
             <div class="info">
               <h1>Instruções</h1>
-              <p>Controles: Mouse e Teclado</p>
-              <ol>
-                <li>Clique em uma parte do corpo (cabeça, cintura, mãos e pés).</li>
-                <li>Aperte R para começar a gravar.</li>
-                <li>Mova o mouse.</li>
-                <li>Aperte R para parar de gravar.</li>
-                <li>Repita!</li>
-              </ol>
+              <p>Controles: Mouse</p>
+              <p>Arraste frames pra cima e pra baixo pra mudar o layer.</p>
+              <p>Arraste frames para a esquerda e direita para ajustar o timing.</p>
+              <p>Aperte PRONTO para ver se sua configuração funciona.</p>
+              <p>Aperte EDITAR para voltar ao modo de edição.</p>
             </div>
           </div>
           <div class="grid-item">
             <div class="info">
               <h1>Sobre</h1>
-              <p>Este jogo foi criado para a [B]aze Jam, uma jam do Scratch.</p>
-              <p>O tema era dança. Eu tava com preguiça de fazer um clone de DDR então resolvi inventar isso.</p>
-              <p>Lançado em 29 de dezembro de 2019.</p>
+              <p>Este jogo foi criado para a Instal Jam, uma game jam brasileira organizada pela equipe de devs que eu faço parte, onde eu tinha uma semana para fazer um jogo.</p>
+              <p>O tema era "Cartoon", então eu fiz um jogo que recria um programa de edição, e você precisa organizar os frames do jeito certo pra que a animação toque do jeito certo!</p>
+              <p>Eu acabei usando muito mal o meu tempo e fazendo 1/10 do jogo que eu queria fazer. :p</p>
+              <p>Lançado em 20 de novembro de 2020.</p>
+              <p>Você vai ver mais desse jogo no futuro.</p>
               <h1>Links</h1>
-              <p><a href="https://scratch.mit.edu/projects/356472618/">Página no Scratch</a></p>
-              <p><a href="https://scratch.mit.edu/studios/25368944/">Estúdio da Jam</a></p>
+              <p><a href="https://fupi.itch.io/frameright">Página no Itch</a></p>
+              <p><a href="https://itch.io/jam/instaljam/rate/828362">Página da jam</a></p>
             </div>
           </div>
         </div>
