--- a/projetos/o-mundo-de-leo-exe.html
+++ b/projetos/o-mundo-de-leo-exe.html
@@ -20,7 +20,7 @@
     <meta name="msapplication-TileColor" content="#603cba">
     <meta name="theme-color" content="#6e438d">
 
-    <title>Fupi &#183; Crie sua Dança</title>
+    <title>Fupi &#183; OMundoDeLeo.exe</title>
   </head>
   <body>
     <!-- Olá, eu sou o código-fonte. Por favor não repare na bagunça. '3' !-->
@@ -29,13 +29,13 @@
 
     <section class="proj-header">
       <div class="container">
-        <h1>Crie sua Dança</h1>
+        <h1>OMundoDeLeo.exe</h1>
       </div>
     </section>
 
     <section class='browser-game'>
       <div class="container">
-        <iframe src="https://scratch.mit.edu/projects/356472618/embed" allowtransparency="true" width="100%" height="620" frameborder="0" scrolling="no" allowfullscreen></iframe>
+        <iframe src="https://scratch.mit.edu/projects/445122742/embed" allowtransparency="true" width="100%" height="620" frameborder="0" scrolling="no" allowfullscreen></iframe>
         
         <style>
           body {
@@ -45,11 +45,11 @@
             color: #fff;
           }
           .grid-item {
-            background-color: #a334b3;
+            background-color: #505064;
             color: #fff;
           }
           .grid-item a {
-            color: #04093e;
+            color: #bcc0e8;
           }
         </style>
         
@@ -58,24 +58,21 @@
             <div class="info">
               <h1>Instruções</h1>
               <p>Controles: Mouse e Teclado</p>
-              <ol>
-                <li>Clique em uma parte do corpo (cabeça, cintura, mãos e pés).</li>
-                <li>Aperte R para começar a gravar.</li>
-                <li>Mova o mouse.</li>
-                <li>Aperte R para parar de gravar.</li>
-                <li>Repita!</li>
-              </ol>
+              <p>SETAS para andar e pular (isso é importante)</p>
+              <p>Encontre todas as Pizzas da Memória para desbloquear todos os finais! Se você desbloquear todos os finais você ganha o final verdadeiro.</p>
             </div>
           </div>
           <div class="grid-item">
             <div class="info">
               <h1>Sobre</h1>
+              <p>Esse jogo é cheio de piada interna. Se você não entendeu nada... esse é o motivo.</p>
               <p>Este jogo foi criado para a [B]aze Jam, uma jam do Scratch.</p>
-              <p>O tema era dança. Eu tava com preguiça de fazer um clone de DDR então resolvi inventar isso.</p>
-              <p>Lançado em 29 de dezembro de 2019.</p>
+              <p>O tema era halloween e Michael Jackson. Eu acho que o tema é bem aparente nesse jogo.</p>
+              <p>Esse é o primeiro jogo de "terror" que eu faço em muito tempo, tô até meio orgulhoso kk</p>
+              <p>Lançado em 10 de novembro de 2020.</p>
               <h1>Links</h1>
-              <p><a href="https://scratch.mit.edu/projects/356472618/">Página no Scratch</a></p>
-              <p><a href="https://scratch.mit.edu/studios/25368944/">Estúdio da Jam</a></p>
+              <p><a href="https://scratch.mit.edu/projects/445122742/">Página no Scratch</a></p>
+              <p><a href="https://scratch.mit.edu/studios/27525940/">Estúdio da Jam</a></p>
             </div>
           </div>
         </div>
