Criador de episódio mundo de palitos

--- a/projetos.html
+++ b/projetos.html
@@ -131,6 +131,12 @@
       let projects = {
         'jogos': [
           {
+            name: "Criador de Episódio - MDP",
+            url: "criador-de-episodio-mdp",
+            img: "img/Projetos/MDPCriador.png",
+            desc: "Crie seu próprio episódio de Mundo de Palitos! Deve demorar menos que o episódio 20."
+          },
+          {
             name: "FrameCerto",
             url: "framecerto",
             img: "img/Projetos/FrameCerto.png",
